# duchess

./: .gitignore  Cargo.toml  README.md  build.sh  duchess.html  duchess.js  server.py
src/: board.rs  evaluation.rs  generation.rs  inspection.rs  lib.rs  main.rs  minimax.rs  minmax.rs  misc.rs  negamax.rs  negascout.rs  ordering.rs  pvs.rs  uci.rs
