[package]
name = "duchess"
version = "0.1.0"
authors = ["Roberto Cornacchia <roberto@spinque.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# strum = ""
# strum_macros = ""
clap = ""
rand = ""
vampirc-uci = "0.11"
tokio = { version = "1", features = ["full"] }
