[package]
name = "duchess"
version = "0.1.0"
authors = ["Roberto Cornacchia <roberto@spinque.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# strum = ""
# strum_macros = ""
clap = "3.1.8"
rand = "0.8.5"
vampirc-uci = "0.11.1"
getrandom = { features = ["js"] }
wasm-bindgen = "0.2.83"

[lib]
name = "duchesslib"
path = "src/lib.rs"
crate-type =["cdylib"]

[[bin]]
name = "duchess"
path = "src/main.rs"
